@@ -5,5 +5,5 @@
 if [[ $INCLUDE_AIRCAST = "TRUE" ]]
 then
     ./setconfig_aircast.sh > config_aircast.xml
-    ./aircast-arm -z -x config_aircast.xml
+    ./aircast-arm-static -z -x config_aircast.xml
 fi
